[gd_scene load_steps=5 format=3 uid="uid://be4ajke3n2l0g"]

[ext_resource type="Script" path="res://source/screens/pantConfig/pant_config.gd" id="1_25cpi"]
[ext_resource type="FontFile" uid="uid://dhfqs3hiwwpc3" path="res://resources/lang/MinecraftRegular-Bmg3.otf" id="1_a6jwc"]

[sub_resource type="Gradient" id="Gradient_wagfi"]
offsets = PackedFloat32Array(0.0324675, 0.454545)
colors = PackedColorArray(0.445626, 0.0175171, 0.104678, 1, 0, 0, 0, 1)
metadata/_snap_enabled = true
metadata/_snap_count = 11

[sub_resource type="GradientTexture1D" id="GradientTexture1D_itqv8"]
gradient = SubResource("Gradient_wagfi")

[node name="PantConfig" type="Node2D"]
script = ExtResource("1_25cpi")

[node name="Panel" type="Panel" parent="."]
offset_right = 1280.0
offset_bottom = 720.0

[node name="Fondo" type="Sprite2D" parent="Panel"]
position = Vector2(640, 359.875)
scale = Vector2(5, 720.25)
texture = SubResource("GradientTexture1D_itqv8")

[node name="btn_pant_principal" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -115.5
offset_top = -110.0
offset_right = 115.5
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_a6jwc")
theme_override_font_sizes/font_size = 24
text = "btn_pant_principal"

[node name="btn_idioma" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.5
offset_top = 133.0
offset_right = 115.5
offset_bottom = 193.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_a6jwc")
theme_override_font_sizes/font_size = 24
text = "btn_idioma"

[node name="btn_guardarIdioma" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 227.5
offset_top = -110.0
offset_right = 458.5
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_a6jwc")
theme_override_font_sizes/font_size = 24
text = "btn_guardar"

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 289.0
offset_top = 150.0
offset_right = 399.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_a6jwc")
theme_override_font_sizes/font_size = 24
text = "lbl_idioma"
horizontal_alignment = 1

[connection signal="pressed" from="Panel/btn_pant_principal" to="." method="_on_btn_pant_principal_pressed"]
[connection signal="pressed" from="Panel/btn_idioma" to="." method="_on_btn_idioma_pressed"]
[connection signal="pressed" from="Panel/btn_guardarIdioma" to="." method="_on_btn_guardar_idioma_pressed"]
